refactor: changed method names to be clearer